clusters/main/kubernetes/apps/esphome/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: esphome
  labels:
    pod-security.kubernetes.io/enforce: privileged
