clusters/main/kubernetes/apps/esphome/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esphome
  namespace: esphome
  annotations:
    gethomepage.dev/description: A system to control your ESP8266/ESP32s
    gethomepage.dev/enabled: true
    gethomepage.dev/group: Home Automation
    gethomepage.dev/href: https://esphome.${DOMAIN_0}/
    gethomepage.dev/icon: https://trueforge.org/img/hotlink-ok/chart-icons/esphome.webp
    gethomepage.dev/name: esphome
    gethomepage.dev/widget.url: http://esphome.esphome.svc:3000
    gethomepage.dev/instance: "internal"
    gethomepage.dev/widget.type: esphome

spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy
      sectionName: https
  hostnames:
    - "esphome.${INGRESS_URL}"
  rules:
    - backendRefs:
        - name: esphome
          port: 6052
